# pgvector_RAG

./: .gitignore  README.md  database_schema.md  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements2.txt
app/: colors.py  insert_vectors.py  law_faq.py  similarity_search.py
app/config/: settings.py
app/database/: db_config.py  vector_store.py
app/services/: llm_factory.py  synthesizer.py
data/: law_faq_dataset.csv
docker/: docker-compose.yml
test/vectorStoreTests/: test_vector_store.py
